<!--
  ~ The MIT License (MIT)
  ~ NoteStream, android music player and streamer
  ~ Copyright (c) 2018 Tin Švagelj <tin.svagelj.email@gmail.com> a.k.a. Caellian
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a
  ~ copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation
  ~ the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the
  ~ Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
  ~ THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
  ~ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
  ~ DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <!-- App info -->
    <string name="app_name">NoteStream</string>

    <!-- Common defaults -->
    <string name="song_title_default">Title</string>
    <string name="song_author_default">Author</string>
    <string name="song_album_default">Album</string>
    <string name="song_year_default">Year</string>
    <string name="song_track_default">Track</string>
    <string name="category_default">Category</string>
    <string name="song_genre_marker">Genre:</string>
    <string name="song_time_default">00:00</string>
    <string name="start_marker">Start:</string>
    <string name="end_marker">End:</string>
    <string name="lyrics_marker">Lyrics:</string>

    <string name="label_playlists">Playlists</string>
    <string name="label_genres">Genres</string>
    <string name="label_songs">Songs</string>
    <string name="label_albums">Albums</string>
    <string name="label_artists">Artists</string>
    <string name="label_hidden">Hidden</string>
    <string name="label_search">Search</string>
    <string name="label_local">Local</string>
    <string name="label_favorites">Favorites</string>

    <string name="label_album">Album</string>
    <string name="label_clear">Clear</string>
    <string name="label_share">Share</string>
    <string name="label_delete">Delete</string>

    <string name="label_loading">Loading…</string>

    <!-- Playable locations -->
    <string name="location_local">Local File</string>
    <string name="location_youtube">YouTube</string>
    <string name="location_unknown">Unknown Location</string>

    <!-- Playable locations -->
    <string name="unknown_title">Untitled</string>
    <string name="unknown_artist">Unknown</string>

    <!-- Titles & headers -->
    <string name="title_library">Library</string>

    <!-- Library -->
    <string name="last_listened">Last Listened</string>

    <!-- Playlist -->
    <string name="label_filter">Filter</string>
    <string name="label_shuffle_play">Shuffle Play</string>
    <string name="empty_playlist">Empty playlist!</string>
    <string name="null_player_service">Player service is null.</string>

    <!-- Player -->
    <string name="title_player">Player</string>
    <string name="label_source">Source</string>
    <string name="label_song_album">Song Album</string>

    <!-- Tag editor -->
    <string name="title_tag_editor">Tag Editor</string>
    <string name="label_save_to_file">Save to File</string>
    <string name="edit_unsaved">Can\'t edit tags on items not saved to library!</string>

    <!-- Settings -->
    <string name="title_settings">Settings</string>

    <!-- Song menu -->
    <string name="label_add_library">Add to library</string>
    <string name="label_add_playlist">Add to playlist</string>
    <string name="label_add_favorites">Add to favorites</string>
    <string name="label_download">Download</string>
    <string name="label_play_next">Play next</string>
    <string name="label_add_queue">Add to queue</string>
    <string name="label_show_album">Show album</string>
    <string name="label_show_artist">Show artist</string>
    <string name="label_edit_tags">Edit tags</string>
    <string name="label_show_suggestions">Show suggestions</string>

    <!-- Order menu -->
    <string name="label_order_default">Default order</string>
    <string name="label_order_title">Order by title</string>
    <string name="label_order_author">Order by author</string>
    <string name="label_order_date">Order by date</string>

    <!-- Permissions -->
    <string name="title_permission_optional">Permission needed</string>
    <string name="title_permissions_optional">Permissions needed</string>
    <string name="title_permission_mandatory">Permission required</string>
    <string name="title_permissions_mandatory">Permissions required</string>
    <string name="title_permission_denied">Permission denied</string>
    <string name="title_permissions_denied">Permissions denied</string>
    <string name="mandatory_permissions_explanation">NoteStream requires access to external storage in order to populate library with local music and access to call state so it can temporarily pause music playback when you\'re receiving a phone call. It will not function properly without these permissions. Please change your permission settings.</string>

    <string name="notestream_data_description">NoteStream needs to load your data, scan for new music and prepare everything to run smoothly.\n\nLoading time varies depending on your library.</string>

    <string name="google_sign_in_title">Google Sign In</string>
    <string name="google_sign_in_explanation">By signing in you\'re allowing NoteStream to store your playlists and data on your Google Drive.\n\nThis optional feature makes sure all your music and preferences are always in sync.</string>
    <string name="google_sign_in_fail">Unable to sign in.</string>

    <string name="permission_access_external">Access External Storage</string>
    <string name="permission_access_external_explanation">NoteStream needs to access external storage in order to populate library with local music.</string>
    <string name="permission_access_external_fail">Access to external storage not granted.</string>

    <string name="permission_access_phone_state">Access Phone State</string>
    <string name="permission_access_phone_state_explanation">NoteStream needs to access phone state so it can temporarily pause music playback when you\'re receiving a phone call.</string>

    <string name="welcome_loading_not_ready">Please select your preferences on previous screens.</string>
    <string name="loading_pointer">Loading: %1$s</string>
    <string name="checking_pointer">Checking: %1$s</string>

    <string name="permission_internet">Use Internet</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="never">Don\'t ask again</string>

    <!-- Unsorted -->
    <string name="dummy">DUMMY</string>

</resources>
