<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:padding="5dp"
    android:background="@color/black_dark_overlay"
    android:gravity="center">

    <ImageView
        android:id="@+id/tileBG"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/label_album"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_song" />

    <TextView
        android:id="@+id/labelSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|fill_horizontal"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/song_title_default"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelSongAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|fill_horizontal"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/song_author_default"
        android:textAlignment="center"
        android:textColor="@color/guiGrey"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>