<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Tin Svagelj
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
  ~ documentation files (the "Software"), to deal in the Software without restriction, including without limitation the
  ~ rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit
  ~ persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
  ~ NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
  ~ DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_cancel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_tag_editor"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDownload"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/ic_download_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:paddingTop="2dp"
        android:background="@color/colorAccent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_song"
                    android:contentDescription="@string/label_song_album"/>

                <TextView
                    android:id="@+id/labelSongInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_gravity="bottom"
                    android:padding="5dp"
                    android:textSize="24sp" />

            </FrameLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <EditText
                        android:id="@+id/editTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/song_title_default"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/editTextAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/song_author_default"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <EditText
                        android:id="@+id/editTextAlbum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:ems="10"
                        android:hint="@string/song_album_default"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/editTextTrack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:ems="10"
                        android:hint="@string/song_track_default"
                        android:inputType="number" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <EditText
                        android:id="@+id/editTextYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/song_year_default"
                        android:inputType="number" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_genre_marker"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerGenre"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:paddingTop="2dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelStart"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_marker"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/seekBarStart"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/labelStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_time_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelEnd"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_marker"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/seekBarEnd"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/labelEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_time_default" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:paddingTop="2dp"
                android:background="@color/colorAccent"/>

            <TextView
                android:id="@+id/labelLyrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/lyrics_marker"
                android:textSize="18sp"
                android:textStyle="bold"
                android:labelFor="@+id/editTextLyrics"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextLyrics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:textAlignment="center"
                    tools:ignore="LabelFor" />
            </ScrollView>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/label_save_to_file"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>