<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/statusBarExpanded"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageViewAlbum"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/label_album"
        app:srcCompat="@drawable/ic_song"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonDismiss"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top|end"
            android:background="@drawable/ic_cross" />

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/song_title_default"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/labelTileDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/song_author_default"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/buttonShuffle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_shuffle"
                    android:layout_gravity="center"/>
            </FrameLayout>

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_skip_previous"
                android:elevation="0dp" />

            <Button
                android:id="@+id/buttonTogglePlay"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_play_circle" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_skip_next" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/buttonRepeat"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_repeat"
                    android:layout_gravity="center" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>